--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "kekstatus",
   "version": "0.1.0-alpha",
   "description": "Status module for kekbot.",
-  "main": "index.js",
+  "main": "index.mjs",
   "repository": "https://github.com/spuuntries/kekstatus.git",
   "author": "spuun <kek@spuun.art>",
   "license": "agpl-3.0-only",
   "private": true,
   "dependencies": {
-    "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
-    "pm2": "^5.2.0"
+    "express": "^4.18.1",
+    "lowdb": "^3.0.0",
+    "pm2": "^5.2.0",
+    "socket.io": "^4.5.1"
   }
 }
